[package]
name = "scope_gc"
version = "0.2.2"
edition = "2021"
description = "Scope GC"
keywords = ["gc"]
repository = "https://github.com/823984418/scope_gc"
license = "MIT OR Apache-2.0"

[dependencies]

[features]

# 开启 Rust nightly 特性
_nightly = []

# 允许 RootRef 转换 dyn NodeTrait
root_ref_coerce_unsized = ["_nightly"]
